--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,8 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+  padding: 70px;
+  max-width: 800px;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
